--- a/style.css
+++ b/style.css
@@ -103,10 +103,12 @@ align-items: center;
     user-select: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-@media (max-height:650px)
+@media (max-width:650px)
 {
     .container{
         margin-top: 0px;
+        transform: scale(.7);
     }
+    
 
 }
