--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 
-
 body{
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
     background-color:#f3f3f3;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0%;
 }
 .key{
     background-color: #1C3144;
@@ -29,7 +30,7 @@ body{
     opacity: 1;
 }
 .answer{
-    width: 400px;
+    width: 100%;
     display: flex;
 align-items: center;
     flex-direction: column;
@@ -37,6 +38,7 @@ align-items: center;
 }
 .boxanswer::placeholder{
     user-select: none;
+    opacity: .7;
 }
 
 .boxanswer:focus{
@@ -44,10 +46,8 @@ align-items: center;
 
 }
 .boxanswer{
-    width: 350px;
+    width: 90%;
     height: 60px;
-    display: flex;
-    align-items: center;
     padding-right: 5px;
     box-sizing: border-box;
     font-size: 34px;
@@ -64,10 +64,10 @@ align-items: center;
     margin-top:20px;
     display: flex;
     justify-content: center;
-    width: 400px;
     flex-wrap: wrap;
     gap: 5px;
     user-select: none;
+
 
 }
 
@@ -95,6 +95,7 @@ align-items: center;
     align-items: center;
     border-radius: 20px;
     box-shadow: -5px -5px 20px rgb(255, 255, 255) ,5px 2px 10px rgba(0, 0, 0, 0.264);
+    width: 350px;
 
 }
 .history{
