--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
-
 body{
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
     background-color:#f3f3f3;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0%;
 }
 .key{
     background-color: #1C3144;
@@ -30,7 +27,7 @@ body{
     opacity: 1;
 }
 .answer{
-    width: 100%;
+    width: 400px;
     display: flex;
 align-items: center;
     flex-direction: column;
@@ -46,8 +43,10 @@ align-items: center;
 
 }
 .boxanswer{
-    width: 90%;
+    width: 350px;
     height: 60px;
+    display: flex;
+    align-items: center;
     padding-right: 5px;
     box-sizing: border-box;
     font-size: 34px;
@@ -64,10 +63,10 @@ align-items: center;
     margin-top:20px;
     display: flex;
     justify-content: center;
+    width: 400px;
     flex-wrap: wrap;
     gap: 5px;
     user-select: none;
-
 
 }
 
@@ -95,7 +94,6 @@ align-items: center;
     align-items: center;
     border-radius: 20px;
     box-shadow: -5px -5px 20px rgb(255, 255, 255) ,5px 2px 10px rgba(0, 0, 0, 0.264);
-    width: 350px;
 
 }
 .history{
@@ -106,12 +104,11 @@ align-items: center;
     user-select: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-@media (max-width:450px)
+@media (max-height:650px)
 {
     .container{
         margin-top: 0px;
         transform: scale(.7);
-        overflow: hidden;
     }
     
 
