--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ align-items: center;
     user-select: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-@media (max-height:650px)
+@media (max-width:350px)
 {
     .container{
         margin-top: 0px;
